saga 패턴 적용, 순차적 코레오 그래피

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,14 @@ spring:
   application:
     name: eda
 
-    jpa:
+logging:
+  level:
+    com.pulmuone.eda: DEBUG
+    org.springframework.transaction: DEBUG
+    org.springframework.orm.jpa: DEBUG
+
+  jpa:
+
       hibernate:
         ddl-auto: update
       show-sql: true
